force-app/main/default/objects/Opportunity/fields/Account_Name_for_email__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_for_email__c</fullName>
    <formula>Account.Name</formula>
    <label>Account Name for email</label>
    <type>Text</type>
</CustomField>