force-app/main/default/objects/Opportunity/fields/Charitable_Fund__c.field-meta.xml
<CustomField>
    <fullName>Charitable_Fund__c</fullName>
    <label>Charitable Fund</label>
    <length>50</length>
    <type>Text</type>
</CustomField>