force-app/main/default/objects/Opportunity/fields/Item_Donor__c.field-meta.xml
<CustomField>
    <fullName>Item_Donor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Item Donor</label>
    <referenceTo>Item_Donor__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>