force-app/main/default/objects/Opportunity/fields/Square_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Square_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Square Transaction</label>
    <referenceTo>Square_Transaction__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>